--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title:   Elvis Liang
+title:   Cheng Peng
 logo: "/images/Profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br><br>
   Results-driven data analyst, product owner and business system analyst with experiences and a track record of delivering innovative technical solutions that enhance the experience of both customers and analytic professionals. Proficient in SQL, Python, and Power BI, with a validated competence to automate dashboards, streamline processes, and provide tactical direction to stakeholders using easy-to-understand language. Skilled in analyzing behavioral data, identifying business gaps, and developing solutions that meet the needs of both internal and external stakeholders.
   <br><br><br>
-  <a href="https://www.linkedin.com/in/shuchangl/">View My LinkedIn Profile</a>
+  <a href="https://www.linkedin.com/feed/?trk=homepage-basic_sign-in-submit">View My LinkedIn Profile</a>
   <br><br><br>
-  <a href="https://public.tableau.com/profile/shuchang.liang#!/">View My Tableau Work Samples</a>
+  <a href="https://public.tableau.com/app/profile/cheng.peng5586/viz/google_bigquery_analytics/Dashboard1">View My Tableau Work Samples</a>
   <br><br><br>
-  <a href="https://www.notion.so/elvisliang/Portfolio-Elvis-Liang-0d7092fc3fc34f50a878f88a380471f6">View My Notion Portfolios</a>
+  <a href="https://chengpeng422.notion.site/Portfolio-Cheng-c337211bc0bc4ec2973484d9bcdfa6f3?pvs=4">View My Notion Portfolios</a>
   
 theme: jekyll-theme-minimal   
  
